--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     baseline-on-migrate: true
     baseline-version: 1
 management.endpoints.web.exposure.include: '*'
-endpoints:health:sensitive: false
+endpoints.health.sensitive: false
 ---
 spring:
   profiles: cloud
