--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile('org.flywaydb:flyway-core')
     compile 'org.springframework.cloud:spring-cloud-spring-service-connector:2.0.2.RELEASE'
     compile 'org.springframework.cloud:spring-cloud-cloudfoundry-connector:2.0.2.RELEASE'
+    compile 'org.springframework.batch:spring-batch-core'
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('org.postgresql:postgresql')
     testCompile('org.springframework.boot:spring-boot-starter-test')
