--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     compile 'org.springframework.batch:spring-batch-core'
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('org.postgresql:postgresql')
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC2"
+    testCompile "org.mockito:mockito-junit-jupiter:2.18.0"
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.security:spring-security-test')
 }
